--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.3"
+        "laravel/ui": "^4.3",
+        "laravelcollective/html": "^6.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
